[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Rectangle 2.png" type="Texture" id=2]
[ext_resource path="res://src/bg.png" type="Texture" id=3]
[ext_resource path="res://src/File  ArtBoard  Features  CodingStyles  Versions  Trees  Inform.png" type="Texture" id=4]
[ext_resource path="res://src/dRectangle 2.png" type="Texture" id=5]
[ext_resource path="res://Main.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 11 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( -0.561218, 0 )
texture = ExtResource( 3 )
centered = false

[node name="file" type="TextureButton" parent="."]
margin_right = 83.0
margin_bottom = 26.0
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file2" type="TextureButton" parent="."]
margin_left = 92.4997
margin_top = -0.112251
margin_right = 175.5
margin_bottom = 25.8877
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file3" type="TextureButton" parent="."]
margin_left = 195.0
margin_top = 1.0
margin_right = 286.0
margin_bottom = 27.0
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file4" type="TextureButton" parent="."]
margin_left = 303.0
margin_top = -1.0
margin_right = 427.0
margin_bottom = 25.0
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file5" type="TextureButton" parent="."]
margin_left = 446.0
margin_top = 2.0
margin_right = 537.0
margin_bottom = 28.0
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file6" type="TextureButton" parent="."]
margin_left = 553.11
margin_top = 1.88775
margin_right = 636.11
margin_bottom = 27.8877
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file7" type="TextureButton" parent="."]
margin_left = 653.0
margin_top = 2.0
margin_right = 793.0
margin_bottom = 28.0
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File  ArtBoard  Features  CodingStyles  Versions  Trees  Inform" type="Sprite" parent="."]
position = Vector2( 394.756, 16.2334 )
texture = ExtResource( 4 )

[node name="name" type="Label" parent="."]
margin_left = 143.0
margin_top = 65.0
margin_right = 758.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 1 )
text = "WWWWWWWWWWWWWWWWWWW"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Node2D" parent="."]

[node name="Button" type="Button" parent="buttons"]
margin_left = 1.66667
margin_top = 73.3453
margin_right = 115.667
margin_bottom = 108.345
text = "New File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="buttons"]
margin_left = 2.61055
margin_top = 118.651
margin_right = 116.611
margin_bottom = 153.651
text = "Open File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="buttons"]
visible = false
margin_left = 1.66667
margin_top = 167.733
margin_right = 115.667
margin_bottom = 202.733
text = "Delete File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data" type="Label" parent="buttons"]
visible = false
margin_left = 143.0
margin_top = 164.0
margin_right = 748.0
margin_bottom = 481.0
custom_fonts/font = SubResource( 1 )
text = "TEst case"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 546.683
margin_top = 3.17839
margin_right = 638.683
margin_bottom = 25.1784
color = Color( 0.376471, 0.376471, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 83.2748
margin_top = 5.05946
margin_right = 195.274
margin_bottom = 27.0595
color = Color( 0.376471, 0.376471, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="file" to="." method="filePressed"]
[connection signal="pressed" from="file3" to="." method="openFeatures"]
[connection signal="pressed" from="file4" to="." method="openProtoType"]
[connection signal="pressed" from="file5" to="." method="openVersions"]
[connection signal="pressed" from="file7" to="." method="loadInfo"]
[connection signal="pressed" from="buttons/Button" to="." method="newProject"]
[connection signal="pressed" from="buttons/Button2" to="." method="loadProjects"]
